# plutus

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  conftest.py  pyproject.toml
.do/: app.yaml
.github/workflows/: ci.yml
.minerva/knowledge/: index.md
.minerva/work/001-cli-to-web-postgres/: proposal.md  scratchpad.md
configs/: universe.yaml
docs/superpowers/plans/: 2026-05-17-plutus-trading-lab.md
docs/superpowers/specs/: 2026-05-17-plutus-trading-lab-design.md
src/plutus/: __init__.py  backtest.py  broker.py  cli.py  config.py  logging.py  report.py  runner.py  universe.py  web.py
src/plutus/storage/: __init__.py  db.py  models.py
src/plutus/strategies/: __init__.py  adapter.py  base.py  donchian_swing.py  indicators.py  orb.py  registry.py  rsi_vwap.py
tests/: test_backtest.py  test_broker.py  test_cli.py  test_config.py  test_logging.py  test_report.py  test_runner.py  test_storage.py  test_universe.py  test_web.py
tests/strategies/: test_adapter.py  test_base.py  test_donchian_swing.py  test_indicators.py  test_orb.py  test_registry.py  test_rsi_vwap.py
