[project]
name = "plutus"
version = "0.0.0"
description = "Paper-signal trading lab"
requires-python = ">=3.13"
dependencies = [
    "lumibot>=3.13",
    "alpaca-py>=0.30",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.scripts]
plutus = "plutus.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.7",
    "ty>=0.0.1a4",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pre-commit>=4.0",
    "types-pyyaml",
    "freezegun>=1.5",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", "D213",
    "COM812",
    "ANN401",
    "FIX002", "TD002", "TD003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D", "ANN", "PLR2004", "SLF001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty]
strict = true
src = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "-W error -ra --cov=plutus --cov-fail-under=85"
testpaths = ["tests"]
