[project]
name = "plutus"
version = "0.0.0"
description = "Paper-signal trading lab"
requires-python = ">=3.13"
dependencies = [
    "lumibot>=3.13",
    "alpaca-py>=0.30",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.scripts]
plutus = "plutus.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.7",
    "ty>=0.0.1a4",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pre-commit>=4.0",
    "types-pyyaml",
    "freezegun>=1.5",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", "D213",
    "COM812",
    "ANN401",
    "FIX002", "TD002", "TD003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "D", "ANN", "PLR2004", "SLF001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.environment]
# Root source tree for first-party imports; tests resolved via extra-paths
root = ["src"]
extra-paths = ["tests"]

[tool.ty.rules]
# ty 0.0.37 has no single "strict" knob; elevate opt-in rules to error here.
# Rules that are error by default are already enforced without explicit config.
division-by-zero = "error"

[tool.pytest.ini_options]
addopts = "-W error -ra --cov=plutus --cov-fail-under=85"
testpaths = ["tests"]
filterwarnings = [
    # websockets 14 deprecates the legacy sub-package; triggered by alpaca-py at import time.
    "ignore:websockets.legacy is deprecated:DeprecationWarning",
    # pandas 2.x removes 'future.no_silent_downcasting'; triggered by lumibot at import time.
    "ignore:.*no_silent_downcasting.*:DeprecationWarning",
]
